[gd_scene load_steps=16 format=3 uid="uid://y8ju2utt1nsd"]

[ext_resource type="Script" uid="uid://jhp1evdhvaie" path="res://RocketCrontroller.gd" id="1_tpb7v"]
[ext_resource type="Texture2D" uid="uid://db4swb5w3qhwr" path="res://assets/body.png" id="2_cum1y"]
[ext_resource type="Texture2D" uid="uid://b1dmwlsgiyj1k" path="res://sprites/thruster.png" id="4_546ky"]
[ext_resource type="Texture2D" uid="uid://bn7uvcm0llg0a" path="res://assets/side_thruster.png" id="4_awr8v"]
[ext_resource type="Texture2D" uid="uid://8j2xphuhed2t" path="res://assets/gun.png" id="5_cum1y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tut6i"]
size = Vector2(70, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_awr8v"]
atlas = ExtResource("4_546ky")
region = Rect2(96, 0, 48, 265)

[sub_resource type="AtlasTexture" id="AtlasTexture_546ky"]
atlas = ExtResource("4_546ky")
region = Rect2(96, 0, 48, 265)

[sub_resource type="AtlasTexture" id="AtlasTexture_7htxx"]
atlas = ExtResource("4_546ky")
region = Rect2(48, 0, 48, 265)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnerj"]
atlas = ExtResource("4_546ky")
region = Rect2(0, 0, 48, 265)

[sub_resource type="SpriteFrames" id="SpriteFrames_7htxx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awr8v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_546ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7htxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnerj")
}],
"loop": true,
"name": &"thrusting",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cum1y"]
radius = 21.0
height = 193.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_546ky"]
radius = 21.0
height = 193.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4mc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88ct5"]

[node name="Rocket" type="Node2D"]
script = ExtResource("1_tpb7v")

[node name="body_0" type="RigidBody2D" parent="."]
position = Vector2(0, -24)
mass = 14.0
contact_monitor = true
max_contacts_reported = 1

[node name="Camera2D" type="Camera2D" parent="body_0"]
position = Vector2(0, -7.185)
zoom = Vector2(0.7, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body_0"]
shape = SubResource("RectangleShape2D_tut6i")

[node name="Sprite2D" type="Sprite2D" parent="body_0"]
position = Vector2(4.17233e-06, 3.8147e-06)
scale = Vector2(0.273438, 0.429688)
texture = ExtResource("2_cum1y")

[node name="Gun" type="Sprite2D" parent="body_0"]
position = Vector2(0, -123)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("5_cum1y")

[node name="thruster_left" type="RigidBody2D" parent="."]
position = Vector2(-59, 30)
mass = 6.0
contact_monitor = true
max_contacts_reported = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="thruster_left"]
texture_filter = 1
position = Vector2(0, -26.6)
sprite_frames = SubResource("SpriteFrames_7htxx")
animation = &"thrusting"

[node name="CollisionShape2D" type="CollisionShape2D" parent="thruster_left"]
position = Vector2(0, -43.6)
shape = SubResource("CapsuleShape2D_cum1y")

[node name="thruster_right" type="RigidBody2D" parent="."]
position = Vector2(59, 30)
mass = 6.0
contact_monitor = true
max_contacts_reported = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="thruster_right"]
texture_filter = 1
position = Vector2(0, -26.6)
sprite_frames = SubResource("SpriteFrames_7htxx")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="thruster_right"]
position = Vector2(0, -43.6)
shape = SubResource("CapsuleShape2D_546ky")

[node name="side_thruster_left" type="RigidBody2D" parent="."]
position = Vector2(-45.45, -123.34)
contact_monitor = true
max_contacts_reported = 1

[node name="Sprite2D" type="Sprite2D" parent="side_thruster_left"]
scale = Vector2(0.175, 0.225)
texture = ExtResource("4_awr8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_thruster_left"]
shape = SubResource("RectangleShape2D_c4mc6")

[node name="side_thruster_right" type="RigidBody2D" parent="."]
position = Vector2(45.45, -123.34)
contact_monitor = true
max_contacts_reported = 1

[node name="Sprite2D" type="Sprite2D" parent="side_thruster_right"]
scale = Vector2(-0.175, 0.225)
texture = ExtResource("4_awr8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_thruster_right"]
shape = SubResource("RectangleShape2D_88ct5")

[node name="left_to_body" type="GrooveJoint2D" parent="."]
position = Vector2(-35, -22)
node_a = NodePath("../body_0")
node_b = NodePath("../thruster_left")
length = 1.0
initial_offset = 1.0

[node name="left_to_body2" type="GrooveJoint2D" parent="."]
position = Vector2(-35, 81.29)
node_a = NodePath("../body_0")
node_b = NodePath("../thruster_left")
length = 1.0
initial_offset = 1.0

[node name="right_to_body" type="GrooveJoint2D" parent="."]
position = Vector2(35, -22)
node_a = NodePath("../body_0")
node_b = NodePath("../thruster_right")
length = 1.0
initial_offset = 1.0

[node name="right_to_body2" type="GrooveJoint2D" parent="."]
position = Vector2(35, 81.29)
node_a = NodePath("../body_0")
node_b = NodePath("../thruster_right")
length = 1.0
initial_offset = 1.0

[node name="side_left_to_body3" type="GrooveJoint2D" parent="."]
position = Vector2(-35, -130.77)
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_left")
length = 1.0
initial_offset = 1.0

[node name="side_left_to_body4" type="GrooveJoint2D" parent="."]
position = Vector2(-35, -115.225)
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_left")
length = 1.0
initial_offset = 1.0

[node name="side_right_to_body3" type="GrooveJoint2D" parent="."]
position = Vector2(35, -130.77)
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_right")
length = 1.0
initial_offset = 1.0

[node name="side_right_to_body4" type="GrooveJoint2D" parent="."]
position = Vector2(35, -115.225)
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_right")
length = 1.0
initial_offset = 1.0

[node name="side_left_to_body5" type="GrooveJoint2D" parent="."]
position = Vector2(-35, -130.77)
rotation = 1.5708
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_left")
length = 1.0
initial_offset = 1.0

[node name="side_left_to_body6" type="GrooveJoint2D" parent="."]
position = Vector2(-35, -115.225)
rotation = 1.5708
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_left")
length = 1.0
initial_offset = 1.0

[node name="side_right_to_body5" type="GrooveJoint2D" parent="."]
position = Vector2(35, -130.77)
rotation = -1.5708
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_right")
length = 1.0
initial_offset = 1.0

[node name="side_right_to_body6" type="GrooveJoint2D" parent="."]
position = Vector2(35, -115.225)
rotation = -1.5708
node_a = NodePath("../body_0")
node_b = NodePath("../side_thruster_right")
length = 1.0
initial_offset = 1.0

[node name="gun_left" type="GrooveJoint2D" parent="."]
position = Vector2(-13, -135)
node_b = NodePath("../body_0")
length = 1.0
initial_offset = 1.0

[node name="gun_right" type="GrooveJoint2D" parent="."]
position = Vector2(13, -135)
node_b = NodePath("../body_0")
length = 1.0
initial_offset = 1.0

[connection signal="body_entered" from="body_0" to="." method="_on_rocket_part_body_entered"]
[connection signal="body_entered" from="thruster_left" to="." method="_on_rocket_part_body_entered"]
[connection signal="body_entered" from="thruster_right" to="." method="_on_rocket_part_body_entered"]
[connection signal="body_entered" from="side_thruster_left" to="." method="_on_rocket_part_body_entered"]
[connection signal="body_entered" from="side_thruster_right" to="." method="_on_rocket_part_body_entered"]
